--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "flickity": "^2.2.2",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-flickity-component": "^3.6.1",
+    "react-hammerjs": "^1.0.1",
+    "sass": "^1.35.2",
+    "smooth-scrollbar": "^8.6.2"
   },
   "devDependencies": {
     "eslint": "7.30.0",
