--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "start-ift": "next -p 4000 start",
+    "start-ift": "next start -p 4000",
     "lint": "next lint"
   },
   "dependencies": {
