--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "flickity": "^2.2.2",
     "next": "11.0.1",
+    "next-redux-wrapper": "^7.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-flickity-component": "^3.6.1",
     "react-hammerjs": "^1.0.1",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
     "sass": "^1.35.2",
     "smooth-scrollbar": "^8.6.2"
   },
