--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "postbuild": "next-sitemap",
     "lint": "next lint"
   },
   "dependencies": {
@@ -13,6 +14,7 @@
     "flickity": "^2.2.2",
     "next": "11.0.1",
     "next-redux-wrapper": "^7.0.2",
+    "next-sitemap": "^1.6.162",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-flickity-component": "^3.6.1",
