--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start && yarn run postbuild",
+    "start": "yarn run postbuild && next start",
     "postbuild": "next-sitemap",
     "lint": "next lint"
   },
