--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
     "sass": "^1.35.2",
-    "smooth-scrollbar": "^8.6.2"
+    "smooth-scrollbar": "^8.6.2",
+    "typescript": "^4.4.2"
   },
   "devDependencies": {
     "eslint": "7.30.0",
