--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "17.0.2",
     "react-flickity-component": "^3.6.1",
     "react-hammerjs": "^1.0.1",
+    "react-input-mask": "^2.0.4",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
     "sass": "^1.35.2",
